# cpyhwpx

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  before.md  build.bat  build_cpyhwpx.bat  build_cpyhwpx_64.bat  build_now.bat  compile_test.bat  cpyhwpx_api.md  cpyhwpx_utils.py  pyproject.toml  run_build.py  setup.py  test_image.py  test_image_run.py  test_insert_file.py  test_table.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
cpyhwpx/: __init__.py  _server_runner.py  bridge.py
cpyhwpx/_native/: __init__.py  cpyhwpx.pyd
cpyhwpx/presets/: README.md  _common.yaml  _schema.yaml  document.yaml  field.yaml  navigation.yaml  shape.yaml  table.yaml  text.yaml
docs/api/: index.html
docs/api/css/: style.css
docs/api/data/: api.json
docs/api/js/: app.js  search.js
docs/mapping/: 00_overview.md  01_core_classes.md  02_properties.md  03_file_io.md  04_text_editing.md  05_table_operations.md  06_field_metatag.md  07_shape_objects.md  08_style_formatting.md  09_run_actions.md  10_param_helpers.md  11_fonts.md  12_utility.md
docs/monit/: now.md  undocumented_functions.md
scripts/: extract_docstrings.py
src/: FontDefs.cpp  FontDefs.h  HwpAction.cpp  HwpAction.h  HwpCtrl.cpp  HwpCtrl.h  HwpParameter.cpp  HwpParameter.h  HwpTypes.h  HwpWrapper.cpp  HwpWrapper.h  Utils.cpp  Utils.h  XHwpDocument.cpp  XHwpDocument.h  XHwpDocuments.cpp  XHwpDocuments.h  bindings.cpp
tests/: __init__.py  test_auto_register.py  test_bridge.py  test_cpyhwpx.py
