[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpyhwpx"
version = "1.0.0"
description = "C++ HWP Automation Library - 32-bit/64-bit Python 지원"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "cpyhwpx Contributors"}
]
keywords = ["hwp", "hangul", "word processor", "automation", "com", "pyhwpx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/example/cpyhwpx"
Documentation = "https://github.com/example/cpyhwpx#readme"
Repository = "https://github.com/example/cpyhwpx.git"
Issues = "https://github.com/example/cpyhwpx/issues"

[tool.setuptools]
packages = ["cpyhwpx", "cpyhwpx._native"]
include-package-data = true

[tool.setuptools.package-data]
"cpyhwpx._native" = ["*.pyd"]
"cpyhwpx" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
